# matchminer-ai-inference-kehl

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: skeleton.md
examples/: run_examples.ipynb  tutorial.md
examples/data/: 2026_01_14_patient_summaries.csv  2026_01_16_dummy_notes.csv  v22_test_run_1.csv  v22_test_run_2.csv
examples/output/: embedded_patients.parquet  final_matches.csv  patient_qc_report.csv  patient_summaries.csv  patient_summarization_metadata.json  trial_qc_report.csv  trial_summaries.csv  trial_summarization_metadata.json
src/matchminer_ai/: __init__.py  config.py  pipeline.py
src/matchminer_ai/_qc/: patients.py  trials.py
src/matchminer_ai/embedding/: embed.py  inference.py
src/matchminer_ai/llm/: backends.py  prompt_rendering.py  reasoning.py  remote_inference.py  vllm_server.py
src/matchminer_ai/matching/: __init__.py  exclusion_check.py  inference.py  llm_checks.py  reasonable_check.py  rerank.py
src/matchminer_ai/patients/: __init__.py  postprocess.py  prepare.py  prompt_builder.py  summarize.py
src/matchminer_ai/presets/: README.md  default.yaml
src/matchminer_ai/prompts/: exclusion_criteria_checker_template.txt  llm_exclusion_criteria.user.txt  llm_match_quality.user.txt  patient.serial.user.primer.txt  patient.serial.user.question.txt  trial.user.primer.txt  trial.user.question.txt
src/matchminer_ai/trials/: __init__.py  postprocess.py  prompt_builder.py  summarize.py
src/mmai/: backends.py  config.py  pipeline.py  remote_inference.py
src/mmai/_qc/: README.md  __init__.py  common.py  patients.py  trials.py
src/mmai/embedding/: __init__.py  embed.py  inference.py
src/mmai/llm/: __init__.py  backends.py  remote_inference.py
src/mmai/matching/: __init__.py  exclusion_check.py  inference.py  match.py  reasonable_check.py
src/mmai/patients/: __init__.py  postprocess.py  prompt_builder.py  summarize.py  tagging.py
src/mmai/presets/: default.yaml
src/mmai/prompts/: embedding.txt  patient.serial.user.primer.txt  patient.user.primer.txt  patient.user.question.txt  reasonable_match_checker_template.txt  trial.user.primer.txt  trial.user.question.txt
src/mmai/qc/: patients.py  trials.py
src/mmai/trials/: __init__.py  postprocess.py  summarize.py
tests/: compare_two_trial_matches.py  conftest.py  test_default_preset.py  test_embedding.py  test_embedding_regression.py  test_imports.py  test_matching.py  test_patient_qc.py  test_patient_summarization.py  test_patient_tagging.py  test_prompt_rendering.py  test_reasoning.py  test_remote_backend.py  test_trial_qc.py  test_trial_summarization.py  test_vllm_server.py
tests/data/embedding_regression/mmai-synthetic/: patient_input.csv  patient_output.csv  patient_output.parquet  trial_input.csv  trial_output.csv  trial_output.parquet
tests/integration/: test_patient_summarization_gpu.py  test_trial_summarization_gpu.py
