[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mmai"
version = "0.0.0"
description = "MatchMiner-AI package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "sentence-transformers>=3.0.0",
  "torch>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "mypy>=1.10",
  "types-PyYAML"
]
local = [
  "vllm>=0.6.3",
  "huggingface_hub>=0.24.0",
  "transformers>=4.44.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mmai = ["presets/*.yaml", "prompts/*.txt"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = false
