[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matchminer-ai"
version = "0.1.0"
description = "MatchMiner-AI package"
readme = "README.md"
requires-python = ">=3.13"
maintainers = [
  { name = "Sabrina Camp", email = "sabrinay_camp@dfci.harvard.edu" },
]
classifiers = [
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "numpy>=2.4.4",
  "pandas>=3.0.2",
  "pyarrow>=24.0.0",
  "pyyaml>=6.0",
  "sentence-transformers>=5.4.1",
  "torch>=2.11.0",
  "vllm>=0.20.2",
  "huggingface_hub>=1.14.0",
  "openai>=2.8.0",
  "transformers>=5.8.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "mypy>=1.10",
  "types-PyYAML"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
matchminer_ai = ["presets/*.yaml", "prompts/*.txt"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.13"
mypy_path = ["src"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = false
